[package]
name = "rust-zmq-test"
version = "0.1.0"
authors = ["Keijiro Takahashi <keijiro@gmail.com>"]
edition = "2021"

[dependencies]
zmq = "0.9.2"
vst = { git = "https://github.com/rustaudio/vst-rs" }

[lib]
name = "plugin"
path = "src/plugin.rs"
crate-type = ["cdylib"]

[[bin]]
name = "sender"
path = "src/sender.rs"

[[bin]]
name = "receiver"
path = "src/receiver.rs"
