[package]
name = "vzo"
version = "0.1.0"
authors = ["Keijiro Takahashi <keijiro@gmail.com>"]
edition = "2021"

[dependencies]
zmq = "0.9.2"
rosc = "0.6.0"
vst = { git = "https://github.com/rustaudio/vst-rs" }
console = "0.15.0"

[features]
vendored-zmq = ['zmq/vendored']

[lib]
name = "plugin"
path = "src/plugin.rs"
crate-type = ["cdylib"]

[[bin]]
name = "bridge"
path = "src/bridge.rs"
